Create dummy date, create result page to display dummy date, add function to home controller, add result menu to share layout

--- a/OCRC/OCRC.csproj
+++ b/OCRC/OCRC.csproj
@@ -231,6 +231,7 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Home\Resule.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
@@ -253,7 +254,7 @@
     <VisualStudio>
       <FlavorProperties GUID="{349c5851-65df-11da-9384-00065b846f21}">
         <WebProjectProperties>
-          <UseIIS>True</UseIIS>
+          <UseIIS>False</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>60037</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
