Yi Create dummy data

--- a/OCRC/OCRC.csproj
+++ b/OCRC/OCRC.csproj
@@ -231,7 +231,7 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\Home\Resule.cshtml" />
+    <Content Include="Views\Home\Result.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
