Working on a partial view to display information from a search page

--- a/OCRC/OCRC.csproj
+++ b/OCRC/OCRC.csproj
@@ -164,6 +164,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\DummyController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -232,6 +233,8 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\Result.cshtml" />
+    <Content Include="Views\Dummy\Index.cshtml" />
+    <Content Include="Views\Dummy\_Dummy.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
