--- a/OCRC/Web.config
+++ b/OCRC/Web.config
@@ -5,13 +5,20 @@
   -->
 <configuration>
   <configSections>
-    
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+  </configSections>
 
 
   <connectionStrings>
-    <add name="OCRCDBContext" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;  AttachDbFilename=|DataDirectory|OCRC.mdf;  Integrated Security=True" />
+    <add
+    name="OCRCDBContext"
+    providerName="System.Data.SqlClient"
+    connectionString="Data Source=(LocalDB)\MSSQLLocalDB;
+ AttachDbFilename=|DataDirectory|OCRC.mdf;
+ Integrated Security=True"
+ 
+ />
   </connectionStrings>
 
 
@@ -57,10 +64,6 @@
       <dependentAssembly>
         <assemblyIdentity name="Antlr3.Runtime" publicKeyToken="eb42632606e9261f" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.5.0.2" newVersion="3.5.0.2" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="System.Diagnostics.DiagnosticSource" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.0.2.1" newVersion="4.0.2.1" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
