--- a/OCRC/OCRC.csproj
+++ b/OCRC/OCRC.csproj
@@ -169,6 +169,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Fake.cs" />
     <Compile Include="Models\OCRC.cs" />
     <Compile Include="Models\Repo.cs" />
     <Compile Include="Models\ReturnResult.cs" />
@@ -237,6 +238,7 @@
     <Content Include="Views\Account\Login.cshtml" />
     <Content Include="Views\Account\ForgotPassword.cshtml" />
     <Content Include="Views\Account\UserList.cshtml" />
+    <Content Include="Views\Home\_KidDetail.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
