--- a/OCRC/Web.config
+++ b/OCRC/Web.config
@@ -11,7 +11,8 @@
 
 
   <connectionStrings>
-    <add name="OCRCDBContext" providerName="System.Data.SqlClient" connectionString= "Data Source=(LocalDB)\MSSQLLocalDB;|DataDirectory|OCRC.mdf;Integrated Security=True;Connect Timeout=30" />
+    <add name="OCRCDBContext" providerName="System.Data.SqlClient" 
+     connectionString= "Data Source=(LocalDB)\MSSQLLocalDB;|DataDirectory|OCRC.mdf;Integrated Security=True;Connect Timeout=30" />
   </connectionStrings>
 
 
@@ -67,6 +68,8 @@
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
     <modules>
+      <remove name="FormsAuthentication" />
+      <add name="FormsAuthentication" type="System.Web.Security.FormsAuthenticationModule" />
       <remove name="TelemetryCorrelationHttpModule" />
       <add name="TelemetryCorrelationHttpModule" type="Microsoft.AspNet.TelemetryCorrelation.TelemetryCorrelationHttpModule, Microsoft.AspNet.TelemetryCorrelation" preCondition="integratedMode,managedHandler" />
       <remove name="ApplicationInsightsWebTracking" />
