changed UserLogin.cs line 38 from =C:\Users\Truong\Documents\ORC.mdf to =|DataDirectory|OCRC.mdf,
changed Web.config line 15 , the string was missing "AttachedDbFilename=" before the |DataDirectory|

--- a/OCRC/OCRC.csproj
+++ b/OCRC/OCRC.csproj
@@ -179,6 +179,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\OCRC.mdf" />
     <Content Include="App_Data\OCRC_Tables_Script.sql" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
