--- a/OCRC/Web.config
+++ b/OCRC/Web.config
@@ -12,7 +12,7 @@
 
   <connectionStrings>
     <add name="OCRCDBContext" providerName="System.Data.SqlClient" 
-     connectionString= "Data Source=(LocalDB)\MSSQLLocalDB;|DataDirectory|OCRC.mdf;Integrated Security=True;Connect Timeout=30" />
+     connectionString= "Data Source=(LocalDB)\MSSQLLocalDB;AttachedDbFilename=|DataDirectory|OCRC.mdf;Integrated Security=True;Connect Timeout=30" />
   </connectionStrings>
 
 
