--- a/OCRC/packages.config
+++ b/OCRC/packages.config
@@ -18,6 +18,8 @@
   <package id="Microsoft.AspNet.TelemetryCorrelation" version="1.0.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebPages.Data" version="3.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebPages.WebData" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.8" targetFramework="net452" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="2.4.0" targetFramework="net452" developmentDependency="true" />
@@ -27,4 +29,5 @@
   <package id="Respond" version="1.4.2" targetFramework="net452" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net452" />
   <package id="WebGrease" version="1.6.0" targetFramework="net452" />
+  <package id="WebMatrix.WebData" version="2.0.30506.0" targetFramework="net452" />
 </packages>
