--- a/OCRC/OCRC.csproj
+++ b/OCRC/OCRC.csproj
@@ -175,6 +175,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\ForgotPasswordModel.cs" />
     <Compile Include="Models\OCRC.cs" />
     <Compile Include="Models\OCRC_API.cs" />
     <Compile Include="Models\Repo.cs" />
