--- a/OCRC/Web.config
+++ b/OCRC/Web.config
@@ -11,7 +11,7 @@
 
 
   <connectionStrings>
-    <add name="OCRCDBContext" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|DefaultConnection.mdf;Integrated Security=True;Connect Timeout=30" />
+    <add name="OCRCDBContext" providerName="System.Data.SqlClient" connectionString= "Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Hoang\CS4790\OCRC\OCRC\App_Data\OCRC.mdf;Integrated Security=True" />
   </connectionStrings>
 
 
