--- a/OCRC/OCRC.csproj
+++ b/OCRC/OCRC.csproj
@@ -264,6 +264,7 @@
     <Content Include="Views\Account\UserList.cshtml" />
     <Content Include="Views\Account\ResetPassword.cshtml" />
     <Content Include="Views\Home\_KidDetails.cshtml" />
+    <Content Include="Views\Account\EditUser.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
