Add LoginPage Documentation

--- a/OCRC/OCRC.csproj
+++ b/OCRC/OCRC.csproj
@@ -220,6 +220,7 @@
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
+    <Content Include="App_Data\LoginPage-Docmentation.docx" />
     <None Include="Properties\PublishProfiles\OCRCftp_pub.pubxml" />
     <None Include="Scripts\jquery-3.2.1.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
